--- a/Pages/supportPage/index.html
+++ b/Pages/supportPage/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
- <div class="container5"></div>   
+ <div class="container5">
+<div class="support">
+    <form action="">
+        <b>Need Support</b>  
+        <p>Contact professionals for guidance</p>
+        <input placeholder="Your Name" type="text">
+        <input placeholder="Email Address" type="email">
+        <input placeholder="Phone" type="number">
+        <textarea placeholder="Your Query"  name="" id=""></textarea>
+        <button type="submit">Submit</button>
+       </form>
+</div>
+ </div>   
 </body>
 </html>
